# mdnotes

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/DECISIONS/: 0001-dry-run-mvp-simplified.md  0001-markdown-renderer.md  0002-rollback-boundary-preflight.md  0002-sqlite-journal-mode.md  0003-db-path-strategy.md  0004-count-deleted-at-column.md  0005-fts5-vs-like.md  0006-search-scope.md  0007-v1.0-retrospective.md  0008-soft-delete-strategy-and-restore-conflict-handling.md  0009-v1.5-retrospective.md  0010-dry-run-mvp-simplified.md  0011-rollback-boundary-preflight.md  0012-v2.0-architecture-proposal.md
docs/PRD/: 01-cli-mvp.md  02-count-command.md  03-tag-rename.md  04-search-command.md  05-soft-delete.md  06-search-optimization.md
docs/SPEC/: 01-cli-mvp.md  02-count-command.md  03-tag-rename-command.md  03-tag-rename.md  04-search-command.md  05-06-soft-delete-search-v1.5.md
src/mdnotes/: __init__.py  cli.py  render.py  storage.py
tests/: conftest.py  test_cli.py  test_cli_search.py  test_cli_soft_delete.py  test_cli_tag.py  test_render.py  test_search.py  test_storage.py  test_storage_soft_delete.py  test_storage_tag.py
tests/integration/: test_search_integration.py
